pre-content updates continued

--- a/src/content/information/linkroll.mdx
+++ b/src/content/information/linkroll.mdx
@@ -27,24 +27,31 @@ export const resource_links = [
 		url: "https://arxiv.org/",
 		image: "https://arxiv.org/static/browse/0.3.4/images/icons/apple-touch-icon.png",
 		description: "Open access to academic papers across various fields.",
-		type: "resources"
+		type: "expertise"
 	},
 	{
 		title: "NASA ADS",
 		url: "https://ui.adsabs.harvard.edu/",
 		image: "https://ui.adsabs.harvard.edu/apple-touch-icon.png",
 		description: "Digital library for physics and astronomy research.",
-		type: "resources"
+		type: "expertise"
 	},
 ];
 
 export const fun_links = [
 	{
-		title: "Wait But Why",
-		url: "https://waitbutwhy.com/",
-		image: "https://waitbutwhy.com/wp-content/themes/waitbutwhy/images/favicon.ico",
-		description: "Thought-provoking long-form articles.",
-		type: "fun"
+		title: "Gnod",
+		url: "https://www.gnod.com/",
+		image: "https://www.gnod.com/images/favicon/og_logo.png",
+		description: "Discover music, art, and culture based on your tastes.",
+		type: "insights"
+	},
+	{
+		title: "Library of Babel",
+		url: "https://libraryofbabel.info/",
+		image: "https://libraryofbabel.info/favicon.png",
+		description: "Explore a virtual library containing all possible combinations of characters.",
+		type: "insights"
 	},
 ];
 
