Removed default content

--- a/src/content/information/linkroll.mdx
+++ b/src/content/information/linkroll.mdx
@@ -62,7 +62,7 @@ Here are some external sites that I think will deepen this rabbit hole you're so
 
 <Linkroll locale={props.locale} links={resource_links} />
 
-A second linkroll?
+In the immortal words of DJ Khaled, "Another one.":
 
 <Linkroll locale={props.locale} links={fun_links} />
 
